Added dependant test cases for InterProcessAssociationsTestCase